[gd_scene load_steps=27 format=3 uid="uid://bqmlk6xtsc7ak"]

[ext_resource type="Texture2D" uid="uid://c5g2wgdums8sf" path="res://Assets/Wind/Free Smoke Fx  Pixel 06.png" id="1_ajvy3"]
[ext_resource type="Script" uid="uid://chf26dde88306" path="res://Scripts/wind_area.gd" id="1_gt5j3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt5j3"]
size = Vector2(45, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i2bm"]
atlas = ExtResource("1_ajvy3")
region = Rect2(0, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a1q3"]
atlas = ExtResource("1_ajvy3")
region = Rect2(64, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub3mt"]
atlas = ExtResource("1_ajvy3")
region = Rect2(128, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi7gj"]
atlas = ExtResource("1_ajvy3")
region = Rect2(192, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_prraa"]
atlas = ExtResource("1_ajvy3")
region = Rect2(256, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7kfj"]
atlas = ExtResource("1_ajvy3")
region = Rect2(320, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ma0d"]
atlas = ExtResource("1_ajvy3")
region = Rect2(384, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkfyc"]
atlas = ExtResource("1_ajvy3")
region = Rect2(448, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_he666"]
atlas = ExtResource("1_ajvy3")
region = Rect2(512, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q52vu"]
atlas = ExtResource("1_ajvy3")
region = Rect2(576, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_72j8i"]
atlas = ExtResource("1_ajvy3")
region = Rect2(640, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wt6q"]
atlas = ExtResource("1_ajvy3")
region = Rect2(0, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg5hi"]
atlas = ExtResource("1_ajvy3")
region = Rect2(64, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d08d"]
atlas = ExtResource("1_ajvy3")
region = Rect2(128, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5clp"]
atlas = ExtResource("1_ajvy3")
region = Rect2(192, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnhys"]
atlas = ExtResource("1_ajvy3")
region = Rect2(256, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s863e"]
atlas = ExtResource("1_ajvy3")
region = Rect2(320, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkq25"]
atlas = ExtResource("1_ajvy3")
region = Rect2(384, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3mib"]
atlas = ExtResource("1_ajvy3")
region = Rect2(448, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_utanp"]
atlas = ExtResource("1_ajvy3")
region = Rect2(512, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmhy0"]
atlas = ExtResource("1_ajvy3")
region = Rect2(576, 1152, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btx3h"]
atlas = ExtResource("1_ajvy3")
region = Rect2(640, 1152, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4v8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i2bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a1q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub3mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi7gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prraa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7kfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ma0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkfyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he666")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q52vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72j8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wt6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg5hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d08d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5clp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnhys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s863e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkq25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3mib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utanp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmhy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btx3h")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}]

[node name="WindArea" type="Area2D"]
scale = Vector2(1.25, 1.25)
script = ExtResource("1_gt5j3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_gt5j3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j4v8c")
autoplay = "default"
frame_progress = 0.1216

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
